# aida

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tool-versions  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  README_AGENTS.md  TODO.md  TOOL_REFACTORING_STATUS.md  bandit-report.json  coverage.xml  docker-compose.yml  enable_hooks.sh  package-lock.json  pyproject.toml  smoke_test.py
.claude/: CLAUDE.md  README.md  settings.json
.claude/commands/: add-tool.md  commit-safe.md  debug-orchestrator.md  fix-imports.md  quick-fix.md  run-tests.md  smoke-test.md  test-chat.md
.githooks/: pre-commit
.github/workflows/: ci.yml  smoke-tests.yml
aida/: __init__.py
aida/agents/base/: __init__.py  base_agent.py  messages.py  sandbox.py  worker_agent.py
aida/agents/coordination/: __init__.py  coordinator_agent.py  dispatcher.py  plan_models.py  storage.py  task_reviser.py  worker_proxy.py
aida/agents/mcp/: __init__.py  filesystem_server.py
aida/agents/tests/: test_coordinator_worker_improved.py
aida/agents/worker/: __init__.py  coding_worker.py
aida/cli/: __init__.py  main.py
aida/cli/commands/: __init__.py  agent.py  chat.py  config.py  interactive.py  llm.py  system.py  test.py  tools.py  tui.py
aida/cli/tui/: __init__.py  app.py
aida/cli/tui/widgets/: agents.py  chat.py  resource_monitor.py  tasks.py
aida/cli/ui/: __init__.py  console.py  progress.py  status.py  tables.py
aida/config/: __init__.py  llm_defaults.py  llm_profiles.py  models.py
aida/core/: __init__.py  agent.py  events.py  mcp_executor.py  memory.py  orchestrator_old.py  state.py  todo_orchestrator.py
aida/core/orchestrator/: __init__.py  config.py  models.py  orchestrator.py  storage.py
aida/core/protocols/: __init__.py  a2a.py  base.py  mcp.py
aida/docs/: chat_improvements_creative.md  chat_test_strategy.md
aida/docs/guides/: hybrid_architecture.md  hybrid_context_tool.md  hybrid_execution_tool.md  hybrid_file_operations_tool.md  hybrid_system_tool.md  todo_orchestrator.md
aida/llm/: __init__.py  manager.py
aida/providers/: __init__.py
aida/providers/llm/: __init__.py  anthropic.py  base.py  cohere.py  manager.py  ollama.py  openai.py  vllm.py
aida/providers/mcp/: __init__.py  base.py  filesystem_client.py
aida/setup/: llm_setup.py
aida/tests/: TEST_TODO.md  __init__.py  base.py  runner.py
aida/tests/integration/: __init__.py  chat_test_runner.py  test_chat_cli.py  test_coordinator_dispatcher_real.py  test_coordinator_real_simple.py  test_coordinator_worker.py  test_hybrid_context.py  test_hybrid_execution.py  test_hybrid_file_operations.py  test_hybrid_system.py  test_llm.py  test_orchestrator.py  validate_no_hardcoding.py
aida/tests/unit/: conftest.py  test_agent.py  test_base_tool.py  test_config.py  test_context_mcp_server.py  test_context_tool.py  test_events.py  test_execution_mcp_server.py  test_execution_tool.py  test_file_operations_tool.py  test_files_mcp_server.py  test_llm_manager.py  test_llm_response_mcp_server.py  test_memory.py  test_orchestrator_init.py  test_orchestrator_storage.py  test_protocols_a2a.py  test_protocols_base.py  test_protocols_mcp.py  test_simple_modules.py  test_state.py  test_system_mcp_server.py  test_task_dispatcher.py  test_thinking_mcp_server.py  test_thinking_tool.py  test_todo_orchestrator.py  test_tools_base.py  test_tui.py  test_websearch_tool.py
aida/tools/: README.md  __init__.py  architecture.py  base.py  base_mcp.py  base_observability.py  base_tool.py  context.py  execution.py  files.py  llm_response.py  maintenance.py  project.py  system.py  thinking.py
aida/tools/context/: README.md  __init__.py  config.py  context.py  mcp_server.py  models.py  observability.py  processors.py  pydantic_tools.py  storage.py
aida/tools/execution/: README.md  __init__.py  config.py  execution.py  mcp_server.py  models.py  observability.py
aida/tools/files/: README.md  __init__.py  config.py  files.py  files_mcp.py  mcp_server.py  models.py  observability.py
aida/tools/llm_response/: README.md  __init__.py  config.py  llm_response.py  mcp_server.py  models.py  observability.py
aida/tools/system/: README.md  __init__.py  config.py  mcp_server.py  models.py  observability.py  system.py
aida/tools/thinking/: README.md  __init__.py  config.py  mcp_server.py  models.py  observability.py  prompt_builder.py  response_parser.py  thinking.py
aida/tools/websearch/: __init__.py  config.py  mcp_server.py  models.py  observability.py  websearch.py
docs/: API.md  mcp-filesystem.md  searxng_setup.md
docs/agents/: QUICKSTART.md  README.md
docs/analysis/: coordinator_worker_protocol_issues.md
docs/tools/: README.md  websearch.md
docs/tui/: README.md
examples/: llm_usage_example.py  tui_demo.py  websearch_example.py
examples/hybrid_file_operations/: README.md  basic_usage.py  comparison_demo.py  migration_demo.py  real_world_example.py
examples/todo_orchestrator/: README.md  cli_demo.py  demo.py  standalone_example.py
scripts/: README_mcp.md  mcp_config.json  start_mcp_filesystem.sh  start_mcp_servers.sh
tests/core/: test_todo_orchestrator_complexity.py
tests/scripts/: smoke_test.py  test_ci_locally.sh  test_mcp_filesystem.py
tests/tools/: test_websearch.py
